add pik of petonestop

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
         </div>
     </div>
-    <!-- ----------------Achievement------------------ -->
+    <!-- ---------------- Achievement ------------------ -->
     <div id="services">
         <div class="container">
             <h1 class="sub-title">My Achievement</h1>
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="image/images/s2.png">
+                    <img src="image/images/pet win.jpg">
                     <div class="layer">
                         <h2>Scavenger Hunt</h2><br>
                         <p>Scavenger Hunt is the seas of words and hunt for treasures of knowledge.By facing challenges, puzzles, and riddles along the way it leads to the road of mysterious journey</p>
