scavenger hunt pik input

--- a/index.html
+++ b/index.html
@@ -180,11 +180,10 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="image/images/icpc.png">
+                    <img src="image/images/Heading.png">
                     <div class="layer">
-                        <h2>ICPC World Final</h2><br>
-                        <p>The ICPC World Finals is the culmination of the International Collegiate Programming Contest (ICPC), an annual competitive programming competition among university students from around the world. As a volunteer at the ICPC World Finals, I had the opportunity to be part of one of the most prestigious events in the field of competitive programming.</p>
-                        
+                        <h2>Champion</h2><br>
+                        <p>Joining the quest and conquer challenges for ultimate glory and fantastic prizes and embarking on a thrilling voyage where every clue leads to hidden treasures of wisdom!</p>     
                     </div>
                 </div>
             </div>
