--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 <div class="work">
                     <img src="image/images/pet win.jpg">
                     <div class="layer">
-                        <h2>Scavenger Hunt</h2><br>
-                        <p>Scavenger Hunt is the seas of words and hunt for treasures of knowledge.By facing challenges, puzzles, and riddles along the way it leads to the road of mysterious journey</p>
+                        <h2>2'nd Runner Up</h2><br>
+                        <p>IDEA Season 3.0, a business plan competition where students are encouraged to show their creative and innovative business ideas.</p>
 
 
                     </div>
