--- a/index.html
+++ b/index.html
@@ -155,9 +155,12 @@
                         <h3>Experience</h3>
                         <ul>
                             <li><span>2023 - Current</span><br>SEO Analyst at <a href="https://bdplusit.com/">BD Plus IT</a></li>
-                            <li><span>2019 - 2020</span><br>SEO Administrator at <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
                             <li><span>2022 - Current</span><br>HR Information Systems (HRIS) Manager at <a href="https://bdplusit.com/">BD Plus IT</a></li>
-                            <li><span>2019 - 2021</span><br>HR Manager at <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
+                            <li><span>2023 - 2024</span><br>SEO Administrator at <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
+                            <li><span>2023 - 2024</span><br>Technical Specialist at <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
+                            <li><span>2022 - 2023</span><br>Project Manager at <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
+                            <li><span>2020 - 2022</span><br>Assistant Project Manager at  <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
+                            <li><span>2019 - 2020</span><br>Executive at  <a href="https://www.azsimplesolution.com/">AZ Simple Solution</a></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="educator">
