--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </div>   
                     <div class="tab-contents" id="educator">
                         <h1>RDM English School</h1>
-                        <h2>IELTS English Spoken Teacher</h2>
+                        <h2>English Spoken Teacher</h2>
                         <ul><p>Here my roles include---</p>
                             <br>
                             <li>Assessing Student Proficiency</li>
